# radimsemerak.cz

./: .gitignore  Cargo.toml
client/: components.json  package.json  pnpm-lock.yaml  svelte.config.js
client/src/lib/components/: Contact.svelte  Experience.svelte  Header.svelte  Hero.svelte  Projects.svelte
client/src/lib/components/layouts/: Navigation.svelte
client/src/lib/components/ui/dropdown-menu/: dropdown-menu-item.svelte
client/src/lib/components/ui/sheet/: sheet-overlay.svelte
client/src/lib/components/ui/table/: table-cell.svelte  table-head.svelte  table-row.svelte
client/src/lib/docs/: publickey.asc
client/src/models/: auth.ts  obfusc.ts  projects.ts
client/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
client/src/routes/admin/: +layout.svelte  +page.server.ts  +page.svelte  data-table-actions.svelte  data-table.svelte
client/src/routes/admin/projects/: +page.server.ts  +page.svelte
client/src/routes/admin/projects/new/: +page.server.ts  +page.svelte
client/src/routes/admin/projects/update/[id]/: +page.svelte  +page.ts
client/src/routes/login/: +page.server.ts  +page.svelte
client/src/routes/project/[id]/: +page.server.ts  +page.svelte
client/src/styles/: index.css
migrations/2024-01-21-085312_create_initial_schema/: up.sql
migrations/2024-01-26-185354_projects_schema/: up.sql
src/: error.rs  lib.rs  main.rs  schema.rs
src/models/: mod.rs  models.rs  project.rs  schema.rs  token.rs
src/repository/: db.rs  mod.rs
src/services/: auth.rs  mod.rs  obfusc.rs  parser.rs  projects.rs  pw.rs
