[package]
name = "semerak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "9"
anyhow = "1.0.79"
axum = { version = "0.7.4", features = ["multipart"] }
dotenv = "0.15.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
async-io = "2.3.0"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
diesel = { version = "2.1.4", features = ["postgres", "chrono"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
diesel_cli = { version = "2.1.1", default-features = false, features = ["postgres"] }
chrono = "0.4.31"
percent-encoding = "2.3.1"
markdown = "1.0.0-alpha.16"
filename = "0.1.1"
tempfile = "3.9.0"
vector-map = "1.0.1"
